# InstantReplay

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.ja.md  README.md  THIRD-PARTY-NOTICES.md
.github/scripts/: compute-unienc-fingerprint.sh  localize-apple-staticlib.sh
.github/workflows/: build-unienc.yml  check-native-binaries.yml  ci-unienc.yml  publish-nuget.yml  update-release-branch.yml
Assets/: Samples  Universal Render Pipeline Asset.asset  Universal Render Pipeline Asset_Renderer.asset
Assets/Sample/: Rotator.cs  Test.cs  ToneGenerator.cs
Assets/Sample/Scenes/: SampleScene.unity
InstantReplay.Externals/: .editorconfig  .gitignore  InstantReplay.Externals.sln  InstantReplay.Externals.sln.DotSettings
InstantReplay.Externals/Apple/InstantReplay.Transcoder/InstantReplay.Transcoder/: Transcoder.swift  VideoSink.swift  api.swift
InstantReplay.Externals/Apple/InstantReplay.Transcoder/InstantReplay.Transcoder.xcodeproj/: project.pbxproj
InstantReplay.Externals/UniEnc.Example/: NativeLibraryResolver.cs  UniEnc.Example.csproj
InstantReplay.Externals/Windows/instant-replay-transcoder/: .gitignore  Cargo.toml
InstantReplay.Externals/Windows/instant-replay-transcoder/src/: lib.rs  transcoder.rs  utils.rs
InstantReplay.Externals/src/UniEnc/: README.md  UniEnc.csproj
InstantReplay.Externals/src/UniEnc.Example/: NativeLibraryResolver.cs  Program.cs  UniEnc.Example.csproj
InstantReplay.Externals/src/UniEnc/Plugins/aarch64-apple-darwin/: libunienc_c.dylib
InstantReplay.Externals/src/UniEnc/Plugins/x86_64-apple-darwin/: libunienc_c.dylib
InstantReplay.Externals/unienc/: .gitignore  Cargo.toml  README.md  about.hbs
InstantReplay.Externals/unienc/.cargo/: config.toml
InstantReplay.Externals/unienc/crates/unienc/: Cargo.toml  build.rs
InstantReplay.Externals/unienc/crates/unienc/src/: android.rs  audio.rs  blit.rs  buffer.rs  ffi.rs  graphics.rs  jpeg.rs  lib.rs  mux.rs  platform.rs  public_types.rs  runtime.rs  types.rs  unity.rs  utils.rs  video.rs
InstantReplay.Externals/unienc/crates/unienc/src/api/: audio.rs  encoding_system.rs  mod.rs  mux.rs  video.rs
InstantReplay.Externals/unienc/crates/unienc/tests/: integration_test.rs
InstantReplay.Externals/unienc/crates/unienc_android_mc/: Cargo.toml
InstantReplay.Externals/unienc/crates/unienc_android_mc/src/: common.rs  config.rs  error.rs  java.rs  lib.rs
InstantReplay.Externals/unienc/crates/unienc_android_mc/src/audio/: mod.rs
InstantReplay.Externals/unienc/crates/unienc_android_mc/src/mux/: mod.rs
InstantReplay.Externals/unienc/crates/unienc_android_mc/src/video/: mod.rs
InstantReplay.Externals/unienc/crates/unienc_android_mc/src/vulkan/: format.rs  hardware_buffer.rs  hardware_buffer_surface.rs  mod.rs  utils.rs
InstantReplay.Externals/unienc/crates/unienc_android_mc/src/vulkan/preprocess/: compile.sh  mod.rs  preprocess.frag.glsl  preprocess.frag.glsl.spv  preprocess.vert.glsl  preprocess.vert.glsl.spv
InstantReplay.Externals/unienc/crates/unienc_android_mc/src/vulkan/presentation/: mod.rs
InstantReplay.Externals/unienc/crates/unienc_android_mc/src/vulkan/types/: handles.rs  mod.rs
InstantReplay.Externals/unienc/crates/unienc_apple_vt/: Cargo.toml
InstantReplay.Externals/unienc/crates/unienc_apple_vt/src/: allocator.rs  audio.rs  common.rs  error.rs  lib.rs  video.rs
InstantReplay.Externals/unienc/crates/unienc_apple_vt/src/audio/: mod.rs
InstantReplay.Externals/unienc/crates/unienc_apple_vt/src/metal/: mod.rs
InstantReplay.Externals/unienc/crates/unienc_apple_vt/src/mux/: mod.rs
InstantReplay.Externals/unienc/crates/unienc_apple_vt/src/video/: mod.rs  serialization.rs
InstantReplay.Externals/unienc/crates/unienc_c/: Cargo.toml  apple-exports.txt  apple-mimalloc-unexports.txt  build.rs
InstantReplay.Externals/unienc/crates/unienc_c/src/: buffer.rs  ffi.rs  graphics.rs  lib.rs  platform.rs  runtime.rs  types.rs  unity.rs
InstantReplay.Externals/unienc/crates/unienc_c/src/api/: android.rs  audio.rs  encoding_system.rs  graphics.rs  mod.rs  mux.rs  runtime.rs  unity.rs  video.rs
InstantReplay.Externals/unienc/crates/unienc_common/: Cargo.toml
InstantReplay.Externals/unienc/crates/unienc_common/src/: buffer.rs  error.rs  lib.rs  runtime.rs  unity.rs
InstantReplay.Externals/unienc/crates/unienc_ffmpeg/: Cargo.toml
InstantReplay.Externals/unienc/crates/unienc_ffmpeg/src/: error.rs  ffmpeg.rs  lib.rs  utils.rs
InstantReplay.Externals/unienc/crates/unienc_ffmpeg/src/audio/: mod.rs
InstantReplay.Externals/unienc/crates/unienc_ffmpeg/src/mux/: mod.rs
InstantReplay.Externals/unienc/crates/unienc_ffmpeg/src/video/: mod.rs  nalu.rs
InstantReplay.Externals/unienc/crates/unienc_webcodecs/: Cargo.toml  build.rs
InstantReplay.Externals/unienc/crates/unienc_webcodecs/src/: emscripten.rs  lib.rs
InstantReplay.Externals/unienc/crates/unienc_webcodecs/src/audio/: mod.rs
InstantReplay.Externals/unienc/crates/unienc_webcodecs/src/js/: library.js  library.ts  mod.rs  tsconfig.json
InstantReplay.Externals/unienc/crates/unienc_webcodecs/src/mux/: mod.rs
InstantReplay.Externals/unienc/crates/unienc_webcodecs/src/video/: mod.rs
InstantReplay.Externals/unienc/crates/unienc_windows_mf/: Cargo.toml
InstantReplay.Externals/unienc/crates/unienc_windows_mf/src/: common.rs  error.rs  lib.rs  mft.rs
InstantReplay.Externals/unienc/crates/unienc_windows_mf/src/audio/: mod.rs
InstantReplay.Externals/unienc/crates/unienc_windows_mf/src/mux/: mod.rs
InstantReplay.Externals/unienc/crates/unienc_windows_mf/src/video/: mod.rs
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
