[package]
name = "unienc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
unienc_common = { workspace = true }

[target.'cfg(all(target_family = "unix", not(target_vendor = "apple"), not(target_os = "android")))'.dependencies]
unienc_ffmpeg = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
unienc_android_mc = { workspace = true }

[target.'cfg(windows)'.dependencies]
unienc_windows_mf = { workspace = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
unienc_apple_vt = { workspace = true }

[dev-dependencies]
tokio = "1.48.0"
rand = "0.9.1"

[features]
default = []
unity = ["unienc_common/unity"]