[package]
name = "unienc_apple_vt"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
bincode = { workspace = true }
bitflags = "2.9.1"
block2 = "0.6.1"
dispatch2 = "0.3.0"
objc2 = { workspace = true }
objc2-audio-toolbox = "0.3.1"
objc2-av-foundation = { version = "0.3.1", features = ["AVMediaFormat", "objc2-core-media"] }
objc2-avf-audio = "0.3.1"
objc2-core-audio-types = "0.3.1"
objc2-core-foundation = "0.3.1"
objc2-core-media = "0.3.1"
objc2-core-video = "0.3.1"
objc2-foundation = "0.3.1"
objc2-metal = "0.3.2"
objc2-video-toolbox = "0.3.1"
tokio = { version = "1.45.1", features = ["sync"] }
unienc_common = { workspace = true, features = ["unity"] }
unity-native-plugin = { workspace = true, features = ["metal_objc2"] }
