[package]
name = "unienc_c"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
unienc = { workspace = true }
bincode = { workspace = true }
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["rt", "macros", "rt-multi-thread"] }
unity-native-plugin = "0.8.0"
thiserror = { workspace = true }

[build-dependencies]
csbindgen = "1.9.3"
