[package]
name = "unienc_c"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
unienc = { workspace = true }
bincode = { workspace = true }
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["macros", "sync"] }
unity-native-plugin = { workspace = true, optional = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2.174"
ndk-sys = "0.6.0"

[features]
default = ["multi-thread"]
unity = ["unity-native-plugin"]
multi-thread = ["futures/thread-pool"]

[build-dependencies]
csbindgen = "1.9.7"
