[package]
name = "unienc_common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
tokio = { version = "1.45.1", features = ["rt", "macros", "rt-multi-thread"] }
unity-native-plugin = "0.8.0"
