[package]
name = "unienc_common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
bincode = { workspace = true }
unity-native-plugin = { workspace = true, optional = true }

[features]
default = []
unity = ["unity-native-plugin"]