[package]
name = "unienc_ffmpeg"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { version = "1.45.1", features = ["time", "macros", "sync", "net", "process", "io-util"] }
unienc_common = { workspace = true }
bincode = { workspace = true }
libc = "0.2.175"
cros-codecs = "0.0.6"
