[package]
name = "unienc_windows_mf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { version = "1.45.1", features = ["rt", "time", "macros", "sync"] }
unienc_common = { workspace = true }
bincode = { workspace = true }
windows-core = "0.61.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_System_Ole",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant"
] }
